@@ -14,7 +14,10 @@ Technology Preview 2 :
 - Add layer sorting/naming.
 - Add logarithmic sliders for some float values.
 - Save GUI config (views, render params).
-- Add an OSD ability on previews and use it for camera location and user landmarks.
+- Improve previews.
+   => Add a right click menu for toggles and modes
+   => Add user markers on OSD
+   => Add a tooltip for OSD items
 - Add a zone editor dialog for localized textures.
 - Add a terrain modifier dialog with zones.
 - Use the curve editor in noise editor
