@@ -36,6 +36,8 @@ public:
         _renderer.customData[3] = &_water;
         _renderer.customData[4] = &_sky;
         
+        addOsd(QString("geolocation"));
+        
         configScaling(0.5, 200.0, 3.0, 50.0);
         configScrolling(-1000.0, 1000.0, 0.0, -1000.0, 1000.0, 0.0);
     }
