@@ -24,6 +24,8 @@ public:
         _water = waterCreateDefinition();
         _terrain = terrainCreateDefinition();
         
+        addOsd(QString("geolocation"));
+        
         configScaling(0.5, 200.0, 3.0, 50.0);
         configScrolling(-1000.0, 1000.0, 0.0, -1000.0, 1000.0, 0.0);
     }
