@@ -2,6 +2,7 @@
 #define _PAYSAGES_QT_PREVIEWOSD_H_
 
 #include <QImage>
+#include "../lib_paysages/camera.h"
 
 class PreviewOsdItem:public QImage
 {
@@ -11,6 +12,8 @@ public:
     void setLocation(double x, double y);
     inline double xlocation() {return _xlocation;};
     inline double ylocation() {return _ylocation;};
+    
+    void drawCamera(CameraDefinition* camera);
     
 private:
     double _xlocation;
@@ -25,6 +28,7 @@ public:
     
     static PreviewOsd* getInstance(QString name);
     
+    void clearItems();
     PreviewOsdItem* newItem(int width, int height);
     PreviewOsdItem* newItem(QImage image);
     void apply(QImage* mask, double xoffset, double yoffset, double scaling);
